[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Fireball.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/tile380.png-784cda3fef6c4f47a4af78ffcddcbdf5.stex"

[node name="Fireball" type="Area2D" groups=[
"enemies",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"enemies",
]]
position = Vector2( -2, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 2.38419e-007 )
scale = Vector2( 0.6, 0.4 )

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="area_entered" from="." to="." method="_on_Fireball_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
